--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,16 @@ html {
     scroll-padding: 6rem;
 }
 
+@media screen and (max-width: 465px) {
+    html, body {
+        width: 100%;
+        height: 100%;
+        margin: 0px;
+        padding: 0px;
+        overflow-x: hidden; 
+    }
+}
+
 
 #navbar {
     background-color: #040A29;
@@ -49,6 +59,14 @@ html {
     color: #A7A0BD;
 }
 
+@media screen and (max-width: 465px) {
+    #navbar ul li a {
+        padding-left: 13px;
+        font-size: 80%;
+
+    }
+}
+
 
 .portfolio {
     padding-bottom: 4rem;
@@ -70,8 +88,9 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column; /* helps to place the <a> below the <h2> */
-    
+    flex-direction: column; 
+    padding-top: 8rem;
+    padding-bottom: 8rem;
 }
 
 .header_container h1 {
@@ -80,13 +99,14 @@ html {
     padding: 30px;
     z-index: 1;
 }
-.header_container p {
-    font-size: 120%;
-    margin-top: 15px;
-    padding: 20px;
-    color: #fff;
-    z-index: 1;
+
+@media screen and (max-width: 465px) {
+    .header_container h1{
+        font-size: 320%;
+    }
 }
+
+
 .header_container a {
     color: #fff;
     z-index: 1;
@@ -104,7 +124,21 @@ html {
     border-color: #A7A0BD;
     color: #A7A0BD;
 }
-    
+
+.intro {
+    font-size: 120%;
+    color: #fff;
+    z-index: 1;
+    text-align: center;
+    margin-top: 2rem;
+}
+
+@media screen and (max-width: 465px) {
+    .intro {
+        font-size: 90%;
+        margin-top: 1rem;
+    }
+}
 
 .overlay {
     background: rgb(0, 0, 0);
@@ -122,14 +156,16 @@ html {
     margin: 0 auto;
     margin-top: 2rem;  
     height: 50%;
-    width: 60%;
+    width: 70%;
     padding: 2rem;
     border: 2px solid #bdbdbd;
     border-radius: 10px;
 }
-@media screen and (min-width: 900px) {
+
+@media screen and (max-width: 465px) {
     .contact_content form {
-      height: 75%;
+      height: 60%;
+      width: 80%;
     }
   }
 
@@ -162,13 +198,9 @@ html {
     font-size: 110%;
 }
 
-@media screen and (min-width: 900px) {
-    .contact_content form {
-        width: 50%;
-    }
-}
 
-@media screen and (min-width: 900px) {
+
+@media screen and (max-width: 465px) {
     .contact_content form textarea {
         height: 50%;
     }
@@ -193,15 +225,33 @@ html {
     padding-right: 1rem;
     padding-top: 1rem;
     padding-bottom: 2rem;
-
 }
+
+@media screen and (max-width: 465px) {
+    .img_div img{
+        width: 74%;
+        height: auto;
+    }
+}
+
 .text_div {
     padding-top: 0.5rem;
     display: inline-block;
     vertical-align: bottom;
-    width: 50%;
-    font-size: 100%;  
+    width: 45%;
 }
+
+@media screen and (max-width: 955px) {
+    .text_div {
+        width: 100%;
+    }
+}
+@media screen and (max-width: 465px) {
+    .text_div {
+        width: 50%;
+    }
+}
+
 
 /* Content is the layout for Tech, Notables, difficulties and solution */
 .content {
@@ -218,7 +268,7 @@ html {
 }
 
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 465px) {
     .content {
     width: 200%;
     }
@@ -246,15 +296,13 @@ html {
 
  #send-btn {
     margin: 1rem auto;
-    width: 97%;
+    width: 100%;
     padding: 1rem;
     background-color: #647AA7;
     border: none;
     border-radius: 10px;
     color: #fff;
-    font-size: 100%;
-  
-    
+    font-size: 100%;   
 }
 #send-btn:hover {
     background-color: #A7A0BD;
@@ -265,6 +313,13 @@ html {
     background-color: #e7dfd5;
     border-radius: 10px;
     color: black;
+}
+
+
+@media screen and (max-width: 465px) {
+    #send-btn {
+    width: 102%;
+    }
 }
 
 
@@ -281,3 +336,4 @@ html {
     font-size: 12px;
     margin: 0 auto;
 }
+
