--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,8 @@ body {
 }
 
 html {
-    scroll-behavior: smooth;
-    scroll-padding: 6rem;
+    -webkit-overflow-scrolling: auto;
+    scroll-padding-top: 4rem;
 }
 
 @media screen and (max-width: 465px) {
@@ -19,7 +19,7 @@ html {
         height: 100%;
         margin: 0px;
         padding: 0px;
-        overflow-x: hidden; 
+        overflow-x: hidden;
     }
 }
 
@@ -27,19 +27,27 @@ html {
 #navbar {
     background-color: #040A29;
     border-bottom: #7586BF solid 2px ;
-    height: 50px;
+    height: 60px;
     align-items: center;
     display: flex;
     justify-content: space-between;
+    /* safari */
+    position: -webkit-sticky;
     position: sticky;
     top: 0;
-    z-index: 4;
-    
+    z-index: 100;
 }
+
+
 #navbar h2{
     color: #fff;
+    font-size: 210%;
     margin-left: 10%;
 }
+
+
+
+
 #navbar ul{
     display: flex;
     align-items: center;
@@ -52,20 +60,103 @@ html {
 #navbar ul li a {
     color: #fff;
     text-decoration: none;
-    padding-left: 20px;
-    font-size: 14px;
+    padding-left: 30px;
+    font-size: 110%;
+    transition: ease-in-out 500ms;
 }
 #navbar ul li a:hover {
     color: #A7A0BD;
+    transition: ease-in-out 500ms;
+    
+
 }
 
 @media screen and (max-width: 465px) {
     #navbar ul li a {
         padding-left: 13px;
         font-size: 80%;
-
     }
 }
+/* Links dissapear */
+@media screen and (max-width:800px) {
+    #navbar ul {
+        display: none;
+    }
+}
+
+
+/* Burger Menu */
+/* position of burger menu has to be -webkit-sticky else it brakes on mobile devices */
+.burger-menu {
+    display: none;
+}
+@media screen and (max-width:800px){
+    .burger-menu {
+        position: -webkit-sticky;
+        display: flex;
+        right: 5%;
+        opacity: 1;
+    }
+}
+/* Dropdown Menu */
+.dropdown-menu-closed {
+    /* hide */
+    top: -550px;
+    height: 0%;
+    width: 100%;
+    background-color: #040A29;
+    overflow: hidden;
+    position: fixed;
+    z-index: 10;
+    transition: all ease-in-out 500ms;
+}
+.dropdown-menu-closed ul li {
+    margin-top: 2rem;
+}
+
+.dropdown-menu-closed ul li a {
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    font-size: 200%;
+    color: #fff;
+    font-weight: 800;
+    padding: 1rem;
+}
+
+
+
+.dropdown-menu-open {
+    /* show */
+    top: 62px;
+    /*height: 555px; */
+    height: 100%;
+    width: 100%;
+    background-color: #040A29;
+    overflow: hidden;
+    position: fixed;
+    z-index: 10;
+    transition: all ease-in-out 500ms;
+}
+.dropdown-menu-open ul li {
+    margin-top: 2rem;
+}
+
+.dropdown-menu-open ul li a {
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    font-size: 200%;
+    color: #fff;
+    font-weight: 800;
+    padding: 1rem;
+}
+.dropdown-menu-open ul li a:hover {
+    background-color:#7586BF;
+    color: #040A29; 
+}
+/* Dropdown menu End */
+
 
 
 .portfolio {
@@ -91,7 +182,47 @@ html {
     flex-direction: column; 
     padding-top: 8rem;
     padding-bottom: 8rem;
+    transition: all 500ms ease-in-out;
 }
+/* fade in on load */
+.header_container {
+    -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 3s; /* Firefox < 16 */
+        -ms-animation: fadein 3s; /* Internet Explorer */
+         -o-animation: fadein 3s; /* Opera < 12.1 */
+            animation: fadein 3s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+
 
 .header_container h1 {
     color: #fff;
@@ -119,10 +250,13 @@ html {
     padding-top: 10px;
     border: white solid 2px;
     border-radius: 50px;
+    transition: ease-in-out .5s;
 }
 .header_container a:hover {
     border-color: #A7A0BD;
     color: #A7A0BD;
+    transition: ease-in-out .5s;
+    
 }
 
 .intro {
@@ -143,6 +277,8 @@ html {
 .overlay {
     background: rgb(0, 0, 0);
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     opacity: .5;
@@ -292,8 +428,6 @@ html {
 
 
 
-
-
  #send-btn {
     margin: 1rem auto;
     width: 100%;
@@ -336,4 +470,25 @@ html {
     font-size: 12px;
     margin: 0 auto;
 }
+
+
+/* Below is the padding adjust for the anchor to link works on mobile devices */
+
+@media screen and (max-width: 700px) {
+    .content_one {
+    padding-top: 70px;
+    
+    }
+}
+@media screen and (max-width: 700px) {
+    .portfolio {
+    padding-top: 70px;
+    }
+}
+@media screen and (max-width: 700px) {
+    .contact_content {
+    padding-top: 70px;
+    }
+}
+
 
