--- a/styles.css
+++ b/styles.css
@@ -476,18 +476,20 @@ html {
 
 @media screen and (max-width: 700px) {
     .content_one {
-    padding-top: 70px;
-    
+    padding-top: 60px;
+    margin-top: 60px;
     }
 }
 @media screen and (max-width: 700px) {
     .portfolio {
-    padding-top: 70px;
+    padding-top: 60px;
+    margin-top: 60px;
     }
 }
 @media screen and (max-width: 700px) {
     .contact_content {
-    padding-top: 70px;
+    padding-top: 60px;
+    margin-top: 60px;
     }
 }
 
